--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
@@ -1,5 +1,6 @@
 .mat-toolbar {
-  background-color: #1776bf;
+/*   background-color: #1776bf; */
+  background-color: #bf4717;
   position: fixed;
   top: 0;
   left: 0;
