--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.css
@@ -57,7 +57,7 @@
   margin-top: 5px;
   margin-bottom: 10px;
   color: lightslategrey;
-  font-weight: lighter;
+  font-weight: medium;
   font-size: smaller;
   white-space: nowrap;
   text-overflow: ellipsis;
